--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,7 @@ input[type='checkbox'] {
   height: 16px;
   border-radius: 4px;
   position: relative;
+  cursor: pointer;
 }
 
 input[type='checkbox']:not(:checked) {
